<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="50dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textSize="20dp"
        android:layout_margin="15dp"
        android:textColor="#000"
        android:id="@+id/Name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:textSize="20dp"
        android:layout_margin="15dp"
        android:textColor="#000"
        android:id="@+id/Psd"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/log_ind"
        android:textSize="20dp"
        android:id="@+id/btn"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textSize="20dp" />
    
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:src="@drawable/google"
        android:layout_gravity="center"
        android:id="@+id/google"/>


</LinearLayout>